manifests/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: supabase
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "www.adminer.org"
        - "version.adminer.org"
      containers:
      - name: adminer
        image: adminer:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 20m
            memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-svc
  namespace: supabase
spec:
  type: ClusterIP
  selector:
    app: adminer
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: supabase
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: db.sammcore.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adminer-svc
            port:
              number: 8080
