manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deployer-ingress
  namespace: deployer
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: deployer.sammcore.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: deployer-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployer-frontend
                port:
                  number: 80
